--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
     "name": "Debian & PostgreSQL",
     "dockerComposeFile": "docker-compose.yml",
     "service": "app",
+    "remoteUser": "vscode",
     // Set *default* container specific settings.json values on container create.
     "settings": {
         "update.showReleaseNotes": false,
