--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
-// Update the VARIANT arg in docker-compose.yml to pick a Node.js version: 10, 12, 14 
 {
     "name": "Debian & PostgreSQL",
     "dockerComposeFile": "docker-compose.yml",
+    "workspaceFolder": "/",
     "service": "app",
     "remoteUser": "vscode",
-    // Set *default* container specific settings.json values on container create.
     "settings": {
         "update.showReleaseNotes": false,
         "workbench.welcomePage.walkthroughs.openOnInstall": false,
@@ -37,7 +36,6 @@
             }
         ]
     },
-    // Add the IDs of extensions you want installed when the container is created.
     "extensions": [
         "dbaeumer.vscode-eslint",
         "mtxr.sqltools",
@@ -51,11 +49,4 @@
         "ms-toolsai.jupyter-keymap",
         "eamodio.gitlens"
     ]
-    // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    // "forwardPorts": [3000, 5432],
-    // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "yarn install",
-    // "onCreateCommand": "pip install --no-cache-dir -r requirements.txt"
-    // Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-    // "remoteUser": "node"
 }
