--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,10 @@ on:
 jobs:
   jobs1:
     runs-on: ubuntu-latest
-    container: debian:bullseye-slim
+    container: 
+      image: debian:bullseye-slim
+      ports:
+        - 5432:5432
     services:
         postgres:
           image: postgres:13
@@ -15,7 +18,11 @@ jobs:
             POSTGRES_DB: postgres
           ports:
             - 5432:5432
-          options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
     steps:
       - run: apt-get update
       - run: > 
