--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,10 +5,7 @@ on:
 jobs:
   jobs1:
     runs-on: ubuntu-latest
-    container: 
-      image: debian:bullseye-slim
-      ports:
-        - 5432:5432
+    # container: debian:bullseye-slim
     services:
         postgres:
           image: postgres:13
@@ -24,8 +21,9 @@ jobs:
             --health-timeout 5s
             --health-retries 5
     steps:
-      - run: apt-get update
+      - run: sudo apt-get update
       - run: > 
+          sudo
           apt-get install -y --no-install-recommends
           python3-pytest
           python3-sqlalchemy
