--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
 jobs:
   jobs1:
     runs-on: ubuntu-latest
-    # container: debian:bullseye-slim
+    container: debian:bullseye-slim
     services:
         postgres:
           image: postgres:13
