--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,9 +21,8 @@ jobs:
             --health-timeout 5s
             --health-retries 5
     steps:
-      - run: sudo apt-get update
+      - run: apt-get update
       - run: > 
-          sudo
           apt-get install -y --no-install-recommends
           python3-pytest
           python3-sqlalchemy
